<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CAA7A4"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="3">

        <Button
            android:id="@+id/button1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:backgroundTint="#F0EBEB"
            android:contentDescription="@string/button_1_description"
            android:text=""
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:backgroundTint="#F0EBEB"
            android:contentDescription="@string/button_2_description"
            android:text=""
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:backgroundTint="#F0EBEB"
            android:contentDescription="@string/button_3_description"
            android:text=""
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/button4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:backgroundTint="#F0EBEB"
            android:contentDescription="@string/button_4_description"
            android:text=""
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:backgroundTint="#F0EBEB"
            android:contentDescription="@string/button_5_description"
            android:text=""
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:backgroundTint="#F0EBEB"
            android:contentDescription="@string/button_6_description"
            android:text=""
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/button7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:backgroundTint="#F0EBEB"
            android:contentDescription="@string/button_7_description"
            android:text=""
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:backgroundTint="#F0EBEB"
            android:contentDescription="@string/button_8_description"
            android:text=""
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button9"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:backgroundTint="#F0EBEB"
            android:contentDescription="@string/button_9_description"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/PlayAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_again"
        android:textColor="#FFFFFF"
        android:backgroundTint="#6200EE"
        android:contentDescription="@string/play_again_description"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/Player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text=""
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>